--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,7 @@
 #sidebar {
     font-family: 'Norwester', sans-serif;
     background-color: #3c3c3c;
-    min-height: 100vh;
-    width: fixed;
+    min-height: 100%;
     color: white;
     padding-left: 2%;
     padding-top: 2%;
@@ -29,7 +28,6 @@
 
 .codex-container {
     margin: 0;
-    padding-right: 1%;
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -41,13 +39,11 @@
 .abno-card-row {
     padding-top: .25%;
     padding-bottom: .25%;
-    padding-left: 1%;
 }
 
 .abno-card-portrait {
     width: 100%;
-    min-height: 75px;
-    max-height: 150px;
+    height: 100%;
 }
 
 .abno-card {
@@ -55,7 +51,6 @@
     font-family: 'Norwester', sans-serif;
     border-radius: 0;
     text-align: center;
-    min-width: 75px;
     max-width: 150px;
     background-color: #434343;
     color: white;
