--- a/css/style.css
+++ b/css/style.css
@@ -7,21 +7,24 @@
     --unknown: #5C5A5A;
 }
 
+body {
+    background-color: #7F7F7C;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-#sidebar {
+.sidebar {
     font-family: 'Norwester', sans-serif;
     background-color: #3c3c3c;
     min-height: 100%;
     color: white;
-    padding-left: 2%;
-    padding-top: 2%;
+    padding: 2%;
     position: fixed;
-    z-index: 1;
+    z-index: 4;
     flex: 1;
     word-wrap: break-word;
 }
@@ -33,7 +36,6 @@
     flex: 1;
     padding-top: .25%;
     padding-bottom: .25%;
-    background-color: #7F7F7C;
 }
 
 .abno-card-portrait {
@@ -133,4 +135,65 @@
     .abno-risk-box {
         font-size: .8em;
     }
+}
+
+#profile-sidebar {
+    padding: 1%;
+    text-align: center;
+}
+
+#prof-sidebar-name {
+    font-size: 1.5em;
+}
+
+.prof-sidebar-img {
+    height: 220px;
+    width: 220px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid black;
+}
+
+#prof-sidebar-risk {
+    height: 37px;
+    width: 93px;
+}
+
+#abno-info-page {
+    margin-top: 6%;
+    padding: 4%;
+    background-color: #4C4235;
+    color: #E0E0DF;
+    border-radius: 5px;
+    position: relative;
+    border: 2px solid black;
+}
+
+#title-header {
+    position: absolute;
+    color: black;
+    font-family: 'Norwester', sans-serif;
+    font-size: 2em;
+    border-radius: 15px;
+    z-index: 2;
+    top: -25px;
+    left: 0;
+    right: 0;
+    width: fit-content;
+    margin: auto;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border: 2px solid black;
+}
+
+.abno-quote {
+    text-align: center;
+    font-style: italic;
+}
+
+.gallery-img {
+    max-width: 100%;
+    max-height: 100px;
 }
