RR2 Abno Images

--- a/css/style.css
+++ b/css/style.css
@@ -156,8 +156,8 @@ body {
 }
 
 #prof-sidebar-risk {
-    height: 37px;
-    width: 93px;
+    height: 30px;
+    width: auto;
 }
 
 #abno-info-page {
