--- a/css/profile.css
+++ b/css/profile.css
@@ -174,7 +174,7 @@
 }
 
 .page-img {
-    max-width: 100%;
+    max-width: 300px;
     max-height: 250px;
 }
 
@@ -218,6 +218,15 @@
     text-align: center;
     font-style: italic;
     font-size: .8em;
+}
+
+.outer-slide-nav {
+    top: 4%;
+}
+
+.outer-slide-header {
+    text-align: center;
+    display: block;
 }
 
 /*------------COLLAPSIBLE------------*/
@@ -284,6 +293,8 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
+    max-height: 250px;
 }
 
 .enemy-info-separator {
